--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -32,7 +32,7 @@
                 <div class="navbar-nav float">
                         <a class="nav-link" href="/login">Login</a>
                         <a class="nav-link" href="/register">Register</a>
-                            <a class="nav-link" href="/logout">Logout<%=currentUser%></a>
+                            <a class="nav-link" href="/logout">Logout</a>
                 </div>
             </div>
         </div>
