--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -38,7 +38,7 @@
         </div>
     </nav>
     <main class="container mt-5">
-        <% if(success && success.length) {%>
+        <!--<% if(success && success.length) {%>
             <div class="alert alert-success alert-dismissible fade show" role="alert">
                 <strong>
                     <%=success%>
@@ -53,7 +53,7 @@
                         </strong>
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     </div>
-                    <% } %>
+                    <% } %>-->
                         <%-body%>
     </main>
     <footer class="footer bg-dark py-3 mt-auto">
