--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -30,15 +30,33 @@
                     <a class="nav-link" href="/campgrounds/new">New</a>
                 </div>
                 <div class="navbar-nav float">
+                    <% if(!currentUser) {%>
                         <a class="nav-link" href="/login">Login</a>
                         <a class="nav-link" href="/register">Register</a>
+                        <% } else {%>
                             <a class="nav-link" href="/logout">Logout</a>
+                            <% } %>
                 </div>
             </div>
         </div>
     </nav>
     <main class="container mt-5">
-        
+        <% if(success && success.length) {%>
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                <strong>
+                    <%=success%>
+                </strong>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <% } %>
+                <% if(error && error.length) {%>
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        <strong>
+                            <%=error%>
+                        </strong>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    <% } %>
                         <%-body%>
     </main>
     <footer class="footer bg-dark py-3 mt-auto">
